# capisce

./: MANIFEST.in  README.md  cAPIsce.bsdesign  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
docs/: CNAME  index.html
docs/assets/css/: styles.min.css
docs/assets/js/: script.min.js
pages/: index.html
src/capisce/: __init__.py  capisce  capisce.py  req.py  wsgi.py
src/capisce.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/capisce/docs/assets/css/: styles.min.css
src/capisce/docs/assets/js/: script.min.js
src/capisce/templates/: index.html
src/capisce/templates/assets/css/: styles.min.css
src/capisce/templates/assets/js/: script.min.js
