[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "capisce"
version = "0.1.7"
authors = [
    {name = "Kaan Giray Buzluk", email = "kaangiray26@protonmail.com"},
]
description = "The Open-Source API Testing Tool"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]
dependencies = [
    "requests",
    "Flask",
    "ratelimit",
    "flask_cors",
]

[project.scripts]
capisce = "capisce.wsgi:main"

[project.urls]
"Homepage" = "https://github.com/kaangiray26/capisce"
"Bug Tracker" = "https://github.com/kaangiray26/capisce/issues"
